@@ -848,9 +848,10 @@
 	  (begin
 	    (cond 
 	     ; Handle escaped syntax metacharacters 
-	     ((char=? #\\ (string-ref syntax 0))
-	      (set! result (cons (substring syntax 0 1) result))
-	      (set! result (cons (substring syntax 1 1) result))
+	     ((and 
+	       (char=? #\$ (string-ref syntax 0))
+	       (char=? #\$ (string-ref syntax 1)))
+	      (set! result (cons "$" result))
 	      (set! syntax (string-drop 2 syntax)))
 	     ; Handle operand reference
 	     ((char=? #\$ (string-ref syntax 0))
